--- a/sites/all/themes/nutland/scss/_drupal-bootstrap.scss
+++ b/sites/all/themes/nutland/scss/_drupal-bootstrap.scss
@@ -10,6 +10,9 @@ $mobile:              "(pointer:none), (pointer:coarse), (hover:none), (hover:on
 $ltr:                 "[dir='ltr'] &";
 
 @import url('/sites/all/libraries/persiandatepicker/persian-datepicker.min.css');
+
+@import 'variables';
+
 // Drop shadows.
 @mixin box-shadow($shadow) {
   -webkit-box-shadow: $shadow;
@@ -3969,16 +3972,19 @@ a {
     .items{
       height: auto!important;
     }
-    .views-row{
+
+    .views-row {
       width: calc(33% - 15px);
+      vertical-align: top;
       display: inline-block;
       overflow: hidden;
       margin: 6px;
       background: whitesmoke;
-        height: 290px;
-        .views-field-title{
+
+      .views-field-title {
         padding: 15px;
-        a{
+
+        a {
           color: black;
           font-weight: bold;
           text-decoration: none;
@@ -3991,7 +3997,6 @@ a {
     .views-row{
       width: 96%!important;
       .items{
-        height: 150px !important;
         width: 100%;
         overflow: hidden;
       }
@@ -4015,15 +4020,6 @@ a {
       }
     }
   }
-  @media (min-width: 768px) and (max-width: 1200px) {
-    .view-display-id-block_1{
-      .view-content{
-        .views-row{
-          height: 225px!important;
-        }
-      }
-    }
-  }
 }
 //page gallery
 .node-type-gallery{
@@ -4040,18 +4036,23 @@ a {
       margin-bottom: 40px;
       .field-name-field-images{
         @media (max-width: 767px) {
-          width: calc(100vw - 4px);
-          margin-right: calc(50% - 50vw + 2px);
+          width: calc(100vw - 8px);
+          margin-right: calc(50% - 50vw + 4px);
         }
         .field-items{
           display: flex;
           flex-wrap: wrap;
-          justify-content: space-between;
           .field-item{
             margin: 3px 0.5%;
             width: 24%;
             @media (max-width: 767px) {
-              width: 32.5% !important;
+              width: 32.3% !important;
+            }
+            @media #{$x500} {
+              width: 100% !important;
+              img {
+                margin: auto;
+              }
             }
           }
         }
